# kubevirt

api/openapi-spec/: swagger.json
cmd/virt-launcher/node-labeller/: node-labeller.sh
pkg/handler-launcher-com/cmd/v1/: cmd.pb.go  cmd.proto
pkg/network/: BUILD.bazel  types.go
pkg/network/dhcp/: BUILD.bazel  configurator.go  handler.go  types.go
pkg/network/driver/: common.go
pkg/network/link/: BUILD.bazel  discovery.go
pkg/network/multus/: status.go  status_test.go
pkg/network/namescheme/: networknamescheme.go
pkg/network/pod/annotations/: generator.go
pkg/network/setup/: netconf.go  netconf_test.go  netstat.go  netstat_test.go  podnic.go
pkg/network/setup/netpod/: discover.go  netpod.go  netpod_test.go
pkg/network/vmicontroller/: status.go  status_test.go
pkg/network/vmispec/: interface.go  interface_test.go
pkg/util/webhooks/: webhooks.go
pkg/virt-api/: api.go  api_test.go
pkg/virt-api/rest/: authorizer.go
pkg/virt-api/webhooks/mutating-webhook/: mutating-webhook.go
pkg/virt-api/webhooks/mutating-webhook/mutators/: vm-mutator.go
pkg/virt-controller/network/: vmcontroller.go
pkg/virt-controller/watch/: vmi.go
pkg/virt-controller/watch/vmi/: vmi.go
pkg/virt-handler/: BUILD.bazel  non-root.go  vm.go
pkg/virt-launcher/virtwrap/: live-migration-target.go  manager.go
pkg/virt-launcher/virtwrap/network/: network.go  podinterface.go
pkg/virt-operator/resource/generate/components/: validations_generated.go
staging/src/kubevirt.io/api/core/v1/: types.go  (+1 more)
staging/src/kubevirt.io/client-go/api/: openapi_generated.go
