load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "reserved_macs.go",
        "types.go",
    ],
    importpath = "kubevirt.io/kubevirt/pkg/network",
    visibility = ["//visibility:public"],
    deps = ["//pkg/network/dhcp:go_default_library"],
)
